# ComfyUI-Chibi-Nodes

./: .gitignore  LICENSE  README.md  __init__.py  chibi_nodes.py  pyproject.toml
examples/: chibi-nodes_example_workflow.json
extras/chibi-wildcards/: animals.txt  art-styles.txt  clothes.txt  colours.txt  descriptors.txt  fabrics.txt  foods.txt  household-objects.txt  landscapes.txt  poses.txt
js/: chibi_nodes.js
nodes/: .gitignore  ConditionText.py  ConditionTextMulti.py  ConditionTextPrompts.py  ImageAddText.py  ImageSimpleResize.py  ImageSizeInfo.py  ImageTool.py  Int2String.py  LoadEmbedding.py  LoadImageExtended.py  Loader.py  Prompts.py  RandomResolutionLatent.py  SaveImages.py  SeedGenerator.py  SimpleSampler.py  TextSplit.py  Textbox.py  Wildcards.py
